@@ -6,6 +6,7 @@
 set -e
 prefix=@prefix@
 qmaildir=@qmaildir@
+logdir=@logdir@
 servicedir=@servicedir@
 rm=/bin/rm
 
@@ -89,7 +90,7 @@ case "$1" in
 		fi
 	fi
 	/usr/bin/getent group nofiles   > /dev/null || /usr/sbin/groupadd nofiles  || true
-	/usr/bin/getent passwd qmaill   > /dev/null || /usr/sbin/useradd -M -g nofiles  -d ${qmaildir}  -s /sbin/nologin qmaill || true
+	/usr/bin/getent passwd qmaill   > /dev/null || /usr/sbin/useradd -M -g nofiles  -d ${logdir}  -s /sbin/nologin qmaill || true
 	if [ $nscd_up -ge 1 ] ; then
 		if [ -x /etc/init.d/nscd ] ; then
 			/etc/init.d/nscd start
