@@ -120,6 +120,8 @@ o svscan: set SERVICEDIR, PWD environment variable
 44. debian/postrm: remove log directory on package removal
 45. PKGBUILD: replaced DESTDIR with pkgdir
 46. installer.c: set default permissions when mode=-1
+47. daemontools.spec, PKGBUILD, debian.preinst: create qmaill user with
+    logdir as home directory
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
